--- a/config.toml
+++ b/config.toml
@@ -10,7 +10,7 @@ title = "Seb Dalgarno"
 
 # The URL of your site.
 # End your URL with a `/` trailing slash, e.g. `https://example.com/`.
-baseurl = "https://sebdalgarno.github.io/"
+baseurl = "https://sebdalgarno.netlify.app/"
 
 # Enter a copyright notice to display in the site footer.
 # To display a copyright symbol, type `&copy;`. For current year, type `{year}`.
